<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Federico Iosue (federico.iosue@gmail.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/tag_text_outline"
        android:orderInCategory="200"
        android:title="@string/category"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="400"
        android:title="@string/share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_checklist_on"
        android:icon="@drawable/ic_list_white_24dp"
        android:orderInCategory="500"
        android:title="@string/checklist_on"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_checklist_off"
        android:icon="@drawable/ic_subject_white_24dp"
        android:orderInCategory="500"
        android:title="@string/checklist_off"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_finish_task"
        android:icon="@drawable/ic_assignment_turned_in_white_24dp"
        android:orderInCategory="900"
        android:title="@string/finish_task"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_restore_task"
        android:icon="@drawable/ic_assignment_return_white_24dp"
        android:orderInCategory="900"
        android:title="@string/restore_task"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_discard_changes"
        android:icon="@drawable/ic_undo_white_24dp"
        android:orderInCategory="1000"
        android:title="@string/discard_changes"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="1200"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

</menu>