<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 Federico Iosue (federico.iosue@gmail.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="6dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:paddingBottom="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/category_marker"
                android:layout_width="7dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/detail_title"
                android:layout_alignTop="@+id/detail_title"
                android:background="@null" />

            <EditText
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:autoLink="all"
                android:background="@null"
                android:hint="@string/title"
                android:inputType="textCapSentences"
                android:paddingBottom="12dp"
                android:paddingEnd="16dp"
                android:paddingLeft="6dp"
                android:paddingRight="16dp"
                android:paddingStart="6dp"
                android:paddingTop="12dp"
                android:textSize="@dimen/text_size_big" />

            <RelativeLayout
                android:id="@+id/reward_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_title"
                android:layout_marginStart="7dp"
                android:paddingTop="3dp">

                <TextView
                    android:id="@+id/reward_explanation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/reward_spinner"
                    android:gravity="center_vertical"
                    android:text="@string/difficulty" />

                <TextView
                    android:id="@+id/reward_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/reward_spinner"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="3dp"
                    android:drawablePadding="3dp"
                    android:drawableStart="@drawable/point_icon"
                    android:paddingBottom="5dp" />

                <Spinner
                    android:id="@+id/reward_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/reward_explanation"
                    android:entries="@array/task_difficulties" />

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="2dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/switch_checkviews"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_list_grey600_24dp"
                android:text="@string/checklist_on"
                android:textSize="@dimen/text_size_small" />

            <ScrollView
                android:id="@+id/content_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarSize="4dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarThumbVertical="@drawable/scroll_bar">

                <EditText
                    android:id="@+id/detail_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:background="@null"
                    android:hint="@string/content"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:textSize="@dimen/text_size_big" />

            </ScrollView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/reminder_date"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_alarm_grey600_24dp"
        android:gravity="center_vertical"
        android:hint="@string/add_reminder"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textSize="@dimen/text_size_small"
        tools:text="creation date" />
</LinearLayout>